Fix alignment and color problems

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -6,7 +6,7 @@
     -fx-font-size: 11pt;
     -fx-font-family: "Segoe UI Semibold";
     -fx-text-fill: #555555;
-    -fx-opacity: 0.6;
+    -fx-opacity: 0.9;
 }
 
 .label-bright {
@@ -21,6 +21,16 @@
     -fx-font-family: "Segoe UI Light";
     -fx-text-fill: white;
     -fx-opacity: 1;
+}
+
+.tab-pane {
+    -fx-padding: 0 0 0 1;
+}
+
+.tab-pane .tab-header-area{
+    -fx-padding: 0 0 0 0;
+    -fx-min-height: 0;
+    -fx-max-height: 0;
 }
 
 .table-view {
@@ -90,12 +100,39 @@
      -fx-background-color: derive(#1d1d1d,20%);
 }
 
+.anchor-pane-with-border {
+     -fx-background-color: derive(#1d1d1d,20%);
+     -fx-border-color: derive(#1d1d1d,10%);
+     -fx-border-top-width: 1px;
+}
+
 .status-bar {
-    -fx-background-color: derive(#1d1d1d,50%);
+    -fx-background-color: derive(#1d1d1d,10%);
+    -fx-text-fill: white;
 }
 
 .status-bar .label {
     -fx-text-fill: white;
+}
+
+.status-bar-with-border {
+    -fx-background-color: derive(#1d1d1d,30%);
+    -fx-border-color: derive(#1d1d1d,25%);
+    -fx-border-width: 1px;
+}
+
+.status-bar-with-border .label {
+    -fx-text-fill: white;
+}
+
+.grid-pane {
+    -fx-background-color: derive(#1d1d1d,30%);
+    -fx-border-color: derive(#1d1d1d,30%);
+    -fx-border-width: 1px;
+}
+
+.grid-pane .anchor-pane {
+    -fx-background-color: derive(#1d1d1d,30%);
 }
 
 .split-pane:horizontal .split-pane-divider {
@@ -178,4 +215,26 @@
 
 .button:default:hover {
     -fx-background-color: derive(-fx-focus-color,30%);
+}
+
+.dialog-pane{
+    -fx-background-color: #1d1d1d;
+}
+
+.dialog-pane > *.button-bar > *.container{
+    -fx-background-color: #1d1d1d;
+}
+.dialog-pane > *.label.content{
+    -fx-font-size: 14px;
+    -fx-font-weight: bold;
+    -fx-text-fill: white;
+}
+.dialog-pane:header *.header-panel{
+    -fx-background-color: derive(#1d1d1d,25%);
+}
+.dialog-pane:header *.header-panel *.label{
+    -fx-font-size: 18px;
+    -fx-font-style: italic;
+    -fx-fill: white;
+    -fx-text-fill: white;
 }
